# Muon-Engine

./: .gitignore  CMakeBuild.bat  CMakeLists.txt  LICENSE  LinuxCMake.sh  MuonEngine.project  MuonEngine.workspace  README.md  TODO.txt  build_info.h  build_info.h.in  glad.c  main.cpp
Dependencies/freetype-gl/: CMakeLists.txt  opengl.h
Dependencies/freetype-gl/harfbuzz/: CMakeLists.txt
Dependencies/glad/include/glad/: glad.h
core/: CMakeLists.txt  application.cpp  application.h  common.h  muon.cpp  muon.h  types.h
core/graphics/: batchrenderer2d.cpp  batchrenderer2d.h  debugrenderer.cpp  debugrenderer.h  masterrenderer.h  meshdata.cpp  meshdata.h  model.h  renderable2d.cpp  renderable2d.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h  simplerenderer2d.cpp  simplerenderer2d.h  sprite.cpp  sprite.h  standardrenderer.cpp  standardrenderer.h  staticsprite.cpp  staticsprite.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  window.cpp  window.h
core/graphics/buffer/: buffer.cpp  buffer.h  buffers.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
core/graphics/layer/: basiclayer.cpp  basiclayer.h  group.cpp  group.h  layer.cpp  layer.h  tilelayer.cpp  tilelayer.h
core/graphics/model/: meshdata.cpp  meshdata.h  model.cpp  model.h
core/graphics/shader/: shader.cpp  shader.h  shadermanager.cpp  shadermanager.h
core/graphics/text/: font.cpp  font.h  label.cpp  label.h
core/input/: input.cpp  input.h
core/math/: aabb.h  mat4.cpp  mat4.h  mathutils.h  quaternion.cpp  quaternion.h  rectangle.h  vec2.h  vec3.h  vec4.h
core/resources/shaders/: basicFragment.glsl  basicVertex.glsl
core/util/: color.cpp  color.h  fileutils.cpp  fileutils.h  log.h  timer.cpp  timer.h
dependencies/assimp/: CMakeLists.txt
dependencies/freetype-gl/: CMakeLists.txt  opengl.h
dependencies/glfw/: cmake_uninstall.cmake
resources/shaders/: basicFragment.glsl  batchFragment.glsl  batchVertex.glsl  debugFragment.glsl  debugVertex.glsl  standardFragment.glsl  standardVertex.glsl  testFragment.glsl  testVertex.glsl
src/graphics/: batchrenderer2d.cpp  batchrenderer2d.h  renderable2d.cpp  renderable2d.h  renderer2d.cpp  renderer2d.h  shader.cpp  shader.h  simplerenderer2d.cpp  simplerenderer2d.h  sprite.cpp  sprite.h  staticsprite.cpp  staticsprite.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h  window.cpp  window.h
src/graphics/buffer/: buffer.cpp  buffer.h  buffers.h  indexbuffer.cpp  indexbuffer.h  vertexarray.cpp  vertexarray.h
src/graphics/layer/: group.cpp  group.h  layer.cpp  layer.h  tilelayer.cpp  tilelayer.h
src/graphics/text/: font.cpp  font.h  label.cpp  label.h
src/input/: input.cpp  input.h
src/math/: mat4.cpp  mat4.h  mathutils.h  vec2.h  vec3.h  vec4.h
src/resources/shaders/: basicVertex.glsl
src/util/: color.cpp  color.h  fileutils.cpp  fileutils.h  log.h  timer.cpp  timer.h
testgame/: CMakeLists.txt  debugcam.cpp  debugcam.h  main.cpp  model.cpp  model.h  player.cpp  player.h
testgame/resources/shaders/: mapVertex.glsl  simpleFragment.glsl  simpleVertex.glsl  standardFragment.glsl
